--- a/src/index.css
+++ b/src/index.css
@@ -11,19 +11,20 @@ body {
 }
 
 .profile{
-  flex: 8;
+  /*flex: 8;*/
   background: #f1f1f1;
   display: flex;
   flex-direction: column;
   /*padding: 10px;*/
-  width: 230px;
+  width: 250px;
   height: 100%;
   position: fixed;
   overflow: scroll;
+  z-index: 1000;
 }
 
 .view-cats {
-  margin-left: 230px;
+  margin-left: 250px;
   flex: 16;
   background: #fff;
   min-height: 400px;
@@ -31,8 +32,38 @@ body {
 
 .about-cat{
   flex: 9;
-  background: lightyellow;
+  background: #f1f1f1;
 }
+
+.interest-container{
+  margin: 30px 10px;
+}
+.interest-container h3{
+  font-weight: 300;
+  margin: 8px 0px;
+}
+.interest-container hr{
+  border-color: #fff;
+}
+
+.interest-container .interest-one{
+  border: 1px solid #333;
+  padding: 6px 10px;
+  font-family: 'Lato';
+  font-weight: 500;
+  margin: 5px;
+}
+
+.interest-container .interests-box{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/*
+.interest-fill{
+  background: #07ABA0;
+  border: #05635d;
+}*/
 
 .avatar { text-align: center; }
 
@@ -101,6 +132,11 @@ body {
   /*margin: 10px;*/
 }
 
+.topbar-icon:hover ion-icon{
+  color: #07ABA0;
+  cursor: pointer;
+}
+
 .topbar-icon ion-icon{
   font-size: 1.8em;
   color: #888;
@@ -130,6 +166,9 @@ body {
   padding: 8px; 
   border-radius: 50%;
   margin: 0 10px;
+  width: 30px;
+  height: 30;
+  text-align: center;
 }
 
 .navigation-icon:hover{
@@ -181,24 +220,90 @@ body {
   color: #fff;
 }
 
-.reaction-icon:hover{
+.reaction-icon:hover {
   cursor: pointer;
   opacity: 1;
-} 
-.reaction-icon ion-icon:hover{
-  color: #9027E2;
-  cursor: pointer;
+}
+
+.show-mobile{
+  display: none;
 }
 
 /* ipad size */
 @media (max-width: 768px){
   .profile{
     display: none;
+    margin-top: 58px;
   }
   .about-cat{
     display: none;
   }
-  .view-cats {
+  .view-cats{
     margin-left: 0px;
   }
+  .show-mobile{
+    display: block;
+  }
+}
+
+.login{
+  width: 300px;
+  border: 1px solid #f2f2f2;
+  border-radius: 5px;
+  /*padding: 20px;*/
+  margin: 0 auto;
+  margin-top: 30px;
+  text-align: center;
+}
+
+.login form{
+  margin: 30px 20px;
+  padding: 0px;
+}
+
+.input-custom{
+  margin: 15px 0; 
+}
+.input-custom label{
+  width: 100%;
+  text-align: left !important;
+  float: left;
+  margin-bottom: 4px;
+  font-family: 'Lato';
+  color: #333;
+}
+.input-custom input {
+  width: 100%;
+  background: #f2f2f2;
+  padding: 6px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1.1em;
+  font-family: 'Lato';
+  color: #444;
+}
+
+.button-primary input {
+  cursor: pointer;
+  font-size: 1.15em;
+  background: #07ABA0;
+  color: #fff;
+  padding: 6px 85px;
+  font-family: 'Lato';
+  border-radius: 6px;
+  opacity: 0.8;
+}
+
+.button-primary input:hover{
+  opacity: 1;
+}
+
+.signup-link {
+  color: #666;
+  font-family: 'Lato';
+}
+.signup-link a {
+  margin-left: 15px;
+  font-weight: bold;
+  color: #9e3bec;
 }
