--- a/src/index.css
+++ b/src/index.css
@@ -314,3 +314,132 @@ body {
   font-weight: bold;
   color: #9e3bec;
 }
+
+
+/*FORMULARIO DE REGISTRO*/
+
+#logo img {
+  display: flex;
+  
+}
+
+.content {
+  display: flex;
+  color: red;
+}
+
+.subheader{
+  font-size: 38px;
+  border-bottom: 1px solid #eee;
+  padding-bottom: 10px;
+  
+}
+
+.complex{
+background-color: #fff;
+margin: 10% auto;
+padding: 5% 5%;
+border-radius: 10px;
+height: 40% !important;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  height: 1320px !important;
+  background: linear-gradient(75deg, #6d78ff, #00ffb8);
+  z-index: 1;
+}
+.center::after {
+ content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: inherit;
+  top: 0.5rem;
+  filter: blur(0.4rem);
+  opacity: 0.7;
+  z-index: -1;
+}
+
+.form-group{
+font-size: 1.2rem;
+font-weight: bold;
+margin: 5% auto;
+}
+
+#name{
+  margin-left: 15px;
+  border-radius: 5px;
+}
+
+.btn-success {
+   background-color: #9c71da;
+    background-size: auto;
+    border: medium none currentcolor;
+    border-radius: 3px;
+    box-shadow: rgba(26,0,35,.08) 0 2px 8px 0;
+    color: #fff;
+    cursor: pointer;
+    font-size: 18px;
+    margin-top: 25%;
+    padding: 20px 100px;
+    transition: all .05s;
+    display: flex;
+    
+  }
+  
+  .btn-success:hover {
+    box-shadow: rgba(0,0,0,.12) 0 5px 28px;
+    opacity: .8;
+    outline: 0 none currentcolor;
+  }
+  
+  
+
+
+
+/*RESPONSIVE*/
+
+/*Desde la anchura 963px hasta la anchura 1488px de pantalla
+@media (max-width: 1488px){
+  /*Se ejecutarán estos estilos
+  .center{
+      width: 85%;
+  }
+}
+
+Desde la anchura 0px hasta la anchura 963px de pantalla
+@media (max-width: 1314px){
+  .center{
+      width: 95%;
+  }
+
+  #menu ul{
+      width: auto;
+  }
+}
+
+@media (max-width: 797px){
+  #logo{
+      float:none;
+      width: 240px;
+      margin: 0px auto;
+      margin-top: 20px;
+
+  }
+
+  #content{
+      float:none;
+      width: 100%;
+  }
+
+  .mid-form{
+      width: 70%;
+  }
+  .mid-form{
+      width: 70%;
+  }
+
+}
+*/
