--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ body {
 }
 
 .interest-container .interest-one{
-  border: 1px solid #333;
+  border: 2px solid #05635d;
   border-radius: 10px 10px 10px 10px;
   padding: 6px 10px;
   font-family: 'Lato';
@@ -412,7 +412,10 @@ margin: 5% auto;
     outline: 0 none currentcolor;
   }
   
-  
+.genero {
+margin-top: 25px;
+width: 100%;
+}
 
 
 
