--- a/src/index.css
+++ b/src/index.css
@@ -1,259 +1,290 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap');
 
-body {
-  margin: 0;
-  font-family: 'Lato', Helvetica, sans-serif;
+body{
+	margin: 0;
+	font-family: 'Lato', 'Helvetica', 'sans-serif';
+	
 }
 
-
-.home-page {
-  display: flex;
+.home-page{
+		display: flex;
 }
 
 .profile{
-  /*flex: 8;*/
-  background: #f1f1f1;
-  display: flex;
-  flex-direction: column;
-  /*padding: 10px;*/
-  width: 250px;
-  height: 100%;
-  position: fixed;
-  overflow: scroll;
-  z-index: 1000;
+	/*flex: 8;*/
+	background: #f1f1f1;
+	display: flex;
+	flex-direction: column;
+	padding: 0px;
+	width: 250px;
+	height: 100%;
+	position: fixed;
+	overflow: scroll;
+	z-index: 1000;
 }
 
-.view-cats {
-  margin-left: 250px;
-  flex: 16;
-  background: #fff;
-  min-height: 400px;
+.view-cats{
+	flex: 16;
+	background: #ffffff;
+	min-height: 400px;
+	margin-left: 250px;
 }
 
 .about-cat{
-  flex: 9;
-  background: #f1f1f1;
+	flex: 9;
+	background: #f1f1f1;
+	z-index: 1000;
+  }
+  
+  .interest-container{
+	margin: 50px 10px;
+  }
+  .interest-container h3{
+	font-weight: 300;
+	margin: 8px 0px;
+  }
+  .interest-container hr{
+	border-color: #fff;
+  }
+  
+  .interest-container .interest-one{
+	border: 1px solid #333;
+	padding: 6px 10px;
+	font-family: 'Lato';
+	font-weight: 500;
+	margin: 5px;
+  }
+  
+  .interest-container .interest-box{
+	display: flex;
+	flex-wrap: wrap;
+  }
+
+.Avatar{text-align: center;}
+
+.Avatar img{
+	width: 130px;
+	height: 130px;
+	border-radius: 50%;
+	box-shadow: 0 2px 1px rgba(0, 0, 0, 0.4);
 }
 
-.interest-container{
-  margin: 30px 10px;
-}
-.interest-container h3{
-  font-weight: 300;
-  margin: 8px 0px;
-}
-.interest-container hr{
-  border-color: #fff;
-}
-
-.interest-container .interest-one{
-  border: 2px solid #05635d;
-  border-radius: 10px 10px 10px 10px;
-  padding: 6px 10px;
-  font-family: 'Lato';
-  font-weight: 500;
-  margin: 5px;
-}
-
-.interest-container .interests-box{
-  display: flex;
-  flex-wrap: wrap;
-}
-
-/*
-.interest-fill{
-  background: #07ABA0;
-  border: #05635d;
-}*/
-
-.avatar { text-align: center; }
-
-.avatar img{
-  width: 130px;
-  height: 130px;
-  border-radius: 50%;
-  box-shadow: 0 2px 1px rgba(0, 0, 0, 0.4);
-}
-.avatar p { 
-  font-weight: 700;
-  font-size: 1.2em;
-  color: #FB4FAF; 
-}
-
-.bio-text{
-  font-weight: 300;
-  font-size: 1.1em;
-  text-align: center;
+.Avatar p{ 
+	font-weight: 700; 
+	font-size: 1.2em; 
+	color: #C800AA;
 }
 
 .menu{
-  margin-top: 20px;
+	margin-top: 20px;
 }
 
-.menu ul {
-  margin: 0px;
-  padding: 0px;
-  list-style: none;
+.menu ul{
+	margin: 0px;
+	padding: 0px;
+	list-style: none ;
 }
 
-.menu ul li div{
-  
+.menu ul li{
+	padding: 8px 5px ;
+	display: flex;
+	align-items: center;
 }
-.menu ul li {
-  padding: 8px 5px;
-  display: flex;
-  align-items: center;
+
+.menu ul a{
+	color: #222222;
+	text-decoration: none;
 }
-.menu ul a {
-  color: #222222;
-  text-decoration: none;
-}
+
 .menu ul a:hover li{
-  background-color: #fff;
+	background-color: #f2f2f2;
 }
-.menu ion-icon {
-  font-size: 1.45em;
-  color: #9027E2;
-  margin: 0 10px;
+
+.menu ion-icon{
+	font-size: 1.45em;
+	color: #9027E2;
+	margin: 0px 10px;
 }
-.menu ul li p {
-  padding: 0px;
-  margin: 0px;
+
+.menu ul li p{
+	padding: 0px;
+	margin: 0px;
+}
+
+.bio-text{
+	font-weight: 300;
+	font-size: 1.1em;
+	text-align: center;
 }
 
 .topbar{
-  display: flex;
-  align-items: center;
-  padding: 0 10px;
-  /*border-bottom: 1px solid #ccc;*/
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+	display: flex;
+	align-items: center;
+	padding: 0px 10px;
+	/*border-bottom: 1px solid #cccccc;*/
+	box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
+}
+
+.topbar p{
+	flex: 1;
+	textAlign: 'center';
+	font-weight: bold;
+	color: #07ABA0;
+	font-size: larger;
 }
 
 .topbar-icon{
-  /*margin: 10px;*/
+	/*margin: 10px;*/
 }
 
 .topbar-icon:hover ion-icon{
-  color: #07ABA0;
-  cursor: pointer;
+	color: #07ABA0;
+	cursor: pointer;
 }
 
 .topbar-icon ion-icon{
-  font-size: 1.8em;
-  color: #888;
+	font-size: 1.8em;
+	color: #888;
 }
 
 .topbar-icon span{
-  background: red;
-  color: #fff;
-  padding: 2px 4px;
-  font-weight: 800;
-  font-size: 0.8em;
-  border-radius: 2px;
-  position: absolute;
-  margin-top: 17px;
-  margin-left: -10px;
+	background: red;
+	color: #ffffff;
+	padding: 2px 4px;
+	font-weight: 800;
+	font-size: 0.8em;
+	border-radius: 2px;
+	position: absolute;
+	margin-top: 17px;
+	margin-left: -10px;
 }
 
-
-.navigation {
-  display: flex;
-  align-items: center;
-  padding: 10px 8px;
+.navigation{
+	display: flex;
+	align-items: center;
+	padding: 10px 8px;
 }
 
 .navigation-icon{
-  background: #9027E2;
-  padding: 8px; 
-  border-radius: 50%;
-  margin: 0 10px;
-  width: 30px;
-  height: 30;
-  text-align: center;
+	background: #9027E2;
+	padding: 8px;
+	border-radius: 50%;
+	margin: 0px 10px;
+	width: 30px;
+	height: 30;
+	text-align: center;
 }
 
 .navigation-icon:hover{
-  background-color: #9e3bec;
-  cursor: pointer;
+	background-color: #9e3bec;
+	cursor: pointer;
 }
 
 .navigation-icon ion-icon{
-  color: #fff;
-  font-size: 27px;
+	color: #ffffff;
+	font-size: 27px;
 }
 
 .image-couple{
-  border: 1px solid #ccc;
-  flex: 1;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
-  text-align: center;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  background: #f1f1f1;
-}
-.image-couple img {
-  width: 100%;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-}
-.image-couple h3{ 
-  font-weight: 800;
-  color: #FB4FAF;
-}
-.image-couple p {
-  font-weight: 300;
+	flex: 1;
+	border: 1px solid #cccccc;
+	box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+	text-align: center;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	background: #f1f1f1;
 }
 
+.image-couple img{
+	width: 100%;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+
+.image-couple h3{
+	font-weight: 800;
+	color: #C800AA;
+}
+
+.image-couple p{
+	font-weight: 300;
+}
 
 .reactions{
-  display: flex;
-  justify-content: center;
-}
-
+	display: flex;
+	justify-content: center;
+  }
+  
 .reaction-icon{
-  padding: 20px;
-  border-radius: 50%;
-  margin: 15px 15px;
-  opacity: 0.8;
-}
+	padding: 20px;
+	border-radius: 50%;
+	margin: 15px 15px;
+	opacity: 0.6;
+  }
 .reaction-icon ion-icon{
-  font-size: 28px;
-  color: #fff;
-}
-
-.reaction-icon:hover {
-  cursor: pointer;
-  opacity: 1;
-}
-
-.show-mobile{
-  display: none;
-}
-
-/* ipad size */
-@media (max-width: 768px){
-  .profile{
-    display: none;
-    margin-top: 58px;
+	font-size: 32px;
+	color: #C800AA;
   }
-  .about-cat{
-    /*display: none;*/
-    display: block; /* esta se quita cuando se haga implementación final */
-    position: fixed;
-    width: 300px;
-    margin-top: 58px;
-    right: 0;
-    height: 100%;
-  }
-  .view-cats{
-    margin-left: 0px;
-  }
-  .show-mobile{
-    display: block;
-  }
-}
+  
+.reaction-icon:hover{
+	cursor: pointer;
+	opacity: 1;
+  } 
 
-.login{
+  .login{
+	width: 300px;
+	border: 1px solid red;
+	border-radius: 5px;
+	padding: 20px;
+	margin: 0 auto;
+	margin-top: 30px;
+	text-align: center;
+  }
+  
+  .login form{
+	margin: 30px 20px;
+	padding: 0px;
+	/*width: 50%;*/
+  }
+  
+  .input-custom{
+	margin: 15px 0; 
+  }
+
+  .input-custom label{
+	width: 100%;
+	text-align: left !important;
+	float: left;
+	margin-bottom: 4px;
+	font-family: 'Lato';
+	color: #333;
+  }
+  .input-custom input, .input-custom textarea {
+	width: 100%;
+	background: #f2f2f2;
+	padding: 6px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	font-size: 1.1em;
+	font-family: 'Lato';
+	color: #444;
+  }
+  
+  .button-primary input {
+	cursor: pointer;
+	font-size: 1.15em;
+	background: #07ABA0;
+	color: #fff;
+	padding: 6px 85px;
+	font-family: 'Lato';
+	border-radius: 6px;
+	opacity: 0.8;
+  }
+  
+  .button-primary input:hover{
+	opacity: 1;
+  }
+  .login{
   width: 300px;
   border: 1px solid #f2f2f2;
   border-radius: 5px;
@@ -279,7 +310,7 @@ body {
   font-family: 'Lato';
   color: #333;
 }
-.input-custom input {
+.input-custom input, .input-custom textarea {
   width: 100%;
   background: #f2f2f2;
   padding: 6px;
@@ -291,6 +322,7 @@ body {
 }
 
 .button-primary input {
+  width: 100%;
   cursor: pointer;
   font-size: 1.15em;
   background: #07ABA0;
@@ -305,161 +337,47 @@ body {
   opacity: 1;
 }
 
-.signup-link {
-  color: #666;
-  font-family: 'Lato';
-}
-.signup-link a {
-  margin-left: 15px;
-  font-weight: bold;
-  color: #9e3bec;
-}
+  .signup-link {
+	color: #666;
+	font-family: 'Lato';
+  }
+  .signup-link a {
+	margin-left: 15px;
+	font-weight: bold;
+	color: #9e3bec;
+  }
 
+  .divider {
+	  width: 5px;
+	  height: 5px;
+	  margin: 0	15px;
+  }
 
-/*FORMULARIO DE REGISTRO*/
+  .form-preferences {
+	  font-family: 'Lato';
+	  font-size: 1.1em;
+	  color: #333333;
+  }
 
-#logos {
-  display: flex;
-  justify-content: center;
-  
-}
+  .preferences-ages-container {
+	  margin: 15px 30px;
+  }
 
-.content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  color: red;
-}
-
-.subheader{
-  font-size: 38px;
-  border-bottom: 1px solid #eee;
-  padding-bottom: 10px;
-  
+.show-mobile{
+	display: none;
 }
 
-.complex{
-background-color: #fff;
-margin: 5% auto;
-padding: 5% 5%;
-border-radius: 10px;
-height: 65%;
 
+.formulario {
+	margin-top: 100px;
+	display: flex;
+	justify-content: center;
+	
+	
 }
-
-.center {
-  display: flex;
-  justify-content: center;
-  height: 1320px !important;
-  background: linear-gradient(75deg, #6d78ff, #00ffb8);
-  z-index: 1;
-}
-.center::after {
- content: '';
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background: inherit;
-  top: 0.5rem;
-  filter: blur(0.4rem);
-  opacity: 0.7;
-  z-index: -1;
-}
-
-.form-group{
-font-size: 1.2rem;
+.register{
+	display: flex;
+	justify-content: center;
 font-weight: bold;
-margin: 5% auto;
+font-size: 1.5rem;
 }
-
-.form-group input{
-  width: 90%;
-  background: #f2f2f2;
-  padding: 6px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 1.1em;
-  font-family: 'Lato';
-  color: #444;
-}
-
-#name{
-  margin-left: 15px;
-  border-radius: 5px;
-}
-
-.btn-success {
-   background-color: #9c71da;
-    background-size: auto;
-    border: medium none currentcolor;
-    border-radius: 3px;
-    box-shadow: rgba(26,0,35,.08) 0 2px 8px 0;
-    color: #fff;
-    cursor: pointer;
-    font-size: 18px;
-    margin-top: 10%;
-    padding: 20px 150px;
-    transition: all .05s;
-    display: flex;
-    align-items: center;
-    
-  }
-  
-  .btn-success:hover {
-    box-shadow: rgba(0,0,0,.12) 0 5px 28px;
-    opacity: .8;
-    outline: 0 none currentcolor;
-  }
-  
-.genero {
-margin-top: 25px;
-width: 100%;
-}
-
-
-
-/*RESPONSIVE*/
-
-/*Desde la anchura 963px hasta la anchura 1488px de pantalla
-@media (max-width: 1488px){
-  /*Se ejecutarán estos estilos
-  .center{
-      width: 85%;
-  }
-}
-
-Desde la anchura 0px hasta la anchura 963px de pantalla
-@media (max-width: 1314px){
-  .center{
-      width: 95%;
-  }
-
-  #menu ul{
-      width: auto;
-  }
-}
-
-@media (max-width: 797px){
-  #logo{
-      float:none;
-      width: 240px;
-      margin: 0px auto;
-      margin-top: 20px;
-
-  }
-
-  #content{
-      float:none;
-      width: 100%;
-  }
-
-  .mid-form{
-      width: 70%;
-  }
-  .mid-form{
-      width: 70%;
-  }
-
-}
-*/
